# clauditor

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: codeql.yml  deploy-docs.yml  lint.yml  python-publish.yml  security.yml  test.disabled  test.yml
checks/: CC002_disable_bypass_permissions_mode.yaml  CC004_deny_sensitive_file_operations.yaml  CC006_enforce_managed_hooks_only.yaml  CC007_force_sso_login_method.yaml  CC008_require_sso_org_uuid.yaml  CC009_require_approval_network_fetching_tools.yaml  CC013_block_sandbox_escape_hatch.yaml  CC015_block_unix_socket_access.yaml  CC018_restrict_plugin_marketplaces.yaml  CC019_disable_remote_sessions.yaml  CC020_enforce_stable_update_channel.yaml  CC022_block_bypass_permissions_default_mode.yaml  CC027_no_api_key_helper_in_project_scope.yaml  CC028_no_otel_headers_helper_in_project_scope.yaml  CC029_no_unrestricted_bash_in_allow_list.yaml  CC031_sandbox_network_domain_allowlist.yaml  CC033_no_unrestricted_webfetch_in_allow_list.yaml
clauditor/: __init__.py  aggregator.py  cli.py  generator.py  loader.py  scanner.py
clauditor/checkers/: __init__.py  base.py  config_absent.py  config_contains.py  config_not_contains.py  config_set.py  config_value.py  file_content.py  file_exists.py
clauditor/checks/: CC001_codeowners_enforcement.yaml  CC002_disable_bypass_permissions_mode.yaml  CC003_enforce_managed_permission_rules_only.yaml  CC005_disable_auto_approval_project_mcp_servers.yaml  CC010_enable_bash_sandboxing.yaml  CC011_restrict_sandbox_filesystem_write_paths.yaml  CC012_restrict_sandbox_filesystem_read_paths.yaml  CC014_block_weaker_nested_sandbox.yaml  CC016_enforce_managed_network_domain_allowlist.yaml  CC017_enforce_managed_mcp_servers_only.yaml  CC021_enforce_short_transcript_retention.yaml  CC023_restrict_http_hook_urls.yaml  CC024_restrict_hook_env_vars.yaml  CC025_deny_env_file_reads.yaml  CC026_deny_filesystem_mcp_server.yaml  CC030_mcp_json_codeowners_enforcement.yaml  CC032_disable_filesystem_mcp_json_server.yaml  CC034_block_otel_log_user_prompts.yaml  CC035_block_otlp_endpoint_in_project_scope.yaml  CC036_block_otlp_headers_in_project_scope.yaml  CC037_block_telemetry_enable_in_project_scope.yaml  CC038_enable_telemetry_in_managed_scope.yaml  CC039_configure_otlp_endpoint_in_managed_scope.yaml  CC040_configure_otlp_metrics_exporter_in_managed_scope.yaml  CC041_configure_otlp_logs_exporter_in_managed_scope.yaml  CC042_block_aws_auth_refresh_in_project_scope.yaml  CC043_block_aws_credential_export_in_project_scope.yaml  CC044_disable_weaker_network_isolation.yaml  (+7 more)
clauditor/models/: __init__.py  check.py  (+1 more)
scripts/: generate_site.py
tests/: conftest.py  test_aggregator.py  test_checker_config_contains.py  test_checker_config_set.py  test_checker_config_value.py  test_checker_file_content.py  test_checker_file_exists.py  test_generator.py  test_loader.py
(+18 files in other folders)
