[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clauditor"
version = "0.2.3"
description = "Security configuration scanner for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
keywords = ["security", "claude", "audit", "scanner", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "gitpython>=3.1",
]

[project.scripts]
clauditor = "clauditor.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "vulture>=2.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["clauditor"]

[tool.hatch.build.targets.sdist]
include = [
  "/clauditor",
  "/README.md",
]
